dnl Process this file with autoconf to produce a configure script.
AC_INIT(antenna.c)
dnl AC_CONFIG_HEADER(config.h)
AC_PREFIX_DEFAULT(/usr/local)

CASSBEAM_MAJOR=1
CASSBEAM_MINOR=1
CASSBEAM_VERSION="${CASSBEAM_MAJOR}.${CASSBEAM_MINOR}"

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl TODO: add the right version to check for
PKG_CHECK_MODULES(GLIB,[glib-2.0 >= 0],,)

dnl get rid of any duplicates in CFLAGS or LIBS
for flag in $GLIB_CFLAGS
do
	if  echo "${CFLAGS}" | grep -v -- "$flag" > /dev/null
	then
		CFLAGS="${CFLAGS} $flag"
	fi
done
for lib in $GLIB_LIBS
do
	if echo "${LIBS}" | grep -v -- "$lib" > /dev/null
	then
		LIBS="${LIBS} $lib"
	fi
done



dnl Checks for libraries.
AC_CHECK_LIB(m, erf)
XLIBS=${LIBS}
LIBS=""
AC_CHECK_LIB(fftw, fftw_create_plan)
AC_CHECK_LIB(rfftw, rfftw_create_plan)
fftw_libs=${LIBS}

dnl if test "x$LIBS" = x
dnl then
dnl 	AC_MSG_ERROR("Couldn't find fftw")
dnl fi

LIBS="${XLIBS} ${fftw_libs}"

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fftw.h)
AC_CHECK_HEADERS(rfftw.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.

if test x${prefix} = "xNONE"
then
	prefix="/usr/local"
fi

echo "LIBS = ${LIBS}"
echo "CFLAGS = ${CFLAGS}"
LDFLAGS="${LDFLAGS} ${LIBS}"

AC_SUBST(CASSBEAM_MAJOR)
AC_SUBST(CASSBEAM_MINOR)
AC_SUBST(CASSBEAM_VERSION)
AC_SUBST(LDFLAGS)

AC_OUTPUT(Makefile)

echo
echo "Type make to build cassbeam"
echo
